<resources>
    <string name="app_name">WALLPAPER 10:20</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="desarrollador">Desarrollado Por: Erick Landero,
        Paulo Estrada y Angel Urey</string>

    <!--Menu Admin-->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Lista de Administradores</string>
    <string name="Salir">Cerrar Sesión</string>

    <!--Menu Cliente-->
    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Galería</string>
    <string name="MasOpcionestxt">Más Opciones</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="Compartir">Compartir</string>
    <string name="Acceder">Acceder</string>

    <!--Registro de Administradores-->
    <string name="RegistroTXT">Registro De Administradores</string>
    <string name="Correo">Correo Electronico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombres Completos</string>
    <string name="Apellidos">Apellidos Completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha De Registro</string>
    <string name="Registrar">Registrar</string>

    <!--Login Administradores-->
    <string name="LoginTXT">Login de Administradores</string>
    <string name="Ingresar">Ingresar</string>

    <string name="Eligeunacategoriatxt">Elige Categoria</string>

    <!--CATEGORIAS-->
    <string name="Animes">ANIMES</string>
    <string name="Videojuegos">VIDEOJUEGOS</string>
    <string name="Programacion">PROGRAMACIÓN</string>
    <string name="Pelicuas">PELÍCULAS/SERIES</string>

    <!--MENU PARTE SUPERIOR DERECHA-->
    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>

    <!--AGREGAR ANIMES-->
    <string name="NombreTXTAnimes">Nombre de Imagen</string>
    <string name="NombreAnimes">Escribe Nombre Aquí</string>
    <string name="VistaAnimes">0</string>
    <string name="PublicarAnime">Publicar</string>

    <!--ITEM ANIME-->
    <string name="NombreImagenAnime"> -- </string>
    <string name="VistaAnime"> -- </string>

    <!--Agregar Pelicula-->
    <string name="NombreTXTPeliculas">Nombre de Imagen</string>
    <string name="NombrePeliculas">Escribe Nombre Aquí</string>
    <string name="VistaPeliculas">0</string>
    <string name="PublicarPelicula">Publicar</string>

    <!--ITEM PELICULA-->
    <string name="NombreImagenPelicula"> -- </string>
    <string name="VistaPelicula"> -- </string>

    <!--Agregar Programacion-->
    <string name="NombreTXTProgramacions">Nombre de Imagen</string>
    <string name="NombreProgramacions">Escribe Nombre Aquí</string>
    <string name="VistaProgramacions">0</string>
    <string name="PublicarProgramacion">Publicar</string>

    <!--ITEM PROGRAMACION-->
    <string name="NombreImagenProgramacion"> -- </string>
    <string name="VistaProgramacion"> -- </string>

    <!--Agregar VideoJuegos-->
    <string name="NombreTXTVideojuegos">Nombre de Imagen</string>
    <string name="NombreVideojuegos">Escribe Nombre Aquí</string>
    <string name="VistaVideojuegos">0</string>
    <string name="PublicarVideojuegos">Publicar</string>

    <!--ITEM Videojuegos-->
    <string name="NombreImagenVideojuego"> -- </string>
    <string name="VistaVideojuego"> -- </string>

    <!--ORDENAR-->
    <string name="OrdenarTXT">Ordenar en: </string>
    <string name="Dos_Columnas">2 Columnas</string>
    <string name="Tres_Columnas">3 Columnas</string>


    <string name="NombreCategoriaD"> -- </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>