<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".InicioSesion">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp">
        
        <TextView
            android:text="@string/LoginTXT"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <!--Animacion-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="Admin.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"></com.airbnb.lottie.LottieAnimationView>

        <!--Correo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/Correo"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Contrasenia-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Password"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>
            
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Acceder"
            android:text="@string/Acceder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Button>
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>